First conditions test